log
Thu 16 May 2024 07:04:03 PM UTC: 
 tests:  0|5
total_score: 0/70
2f050f1
Thu 16 May 2024 07:27:54 PM UTC: 
 sudoku.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:54:26: error: array subscript 9 is above array bounds of ‘int[9]’ [-Werror=array-bounds]
   54 |             if(n->sudo[i][j] == k){
      |                ~~~~~~~~~~^~~
sudoku.c:7:8: note: while referencing ‘sudo’
    7 |    int sudo[9][9];
      |        ^~~~
sudoku.c:60:23: error: array subscript 9 is above array bounds of ‘int[9][9]’ [-Werror=array-bounds]
   60 |             if(n->sudo[j][i] != k){
      |                ~~~~~~~^~~
sudoku.c:7:8: note: while referencing ‘sudo’
    7 |    int sudo[9][9];
      |        ^~~~
sudoku.c:49:17: error: ‘i’ is used uninitialized [-Werror=uninitialized]
   49 |    for(j = 0; i < 9; i++){
      |               ~~^~~
cc1: all warnings being treated as errors
Compilation failed
403a647
Thu 16 May 2024 07:28:15 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:54:17: error: ‘n’ is a pointer; did you mean to use ‘->’?
   54 |             if(n.sudo[i][j] == k){
      |                 ^
      |                 ->
sudoku.c:60:17: error: ‘n’ is a pointer; did you mean to use ‘->’?
   60 |             if(n.sudo[j][i] != k){
      |                 ^
      |                 ->
Compilation failed
e8cd1f9
Thu 16 May 2024 07:28:30 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:54:26: error: array subscript 9 is above array bounds of ‘int[9]’ [-Werror=array-bounds]
   54 |             if(n->sudo[i][j] == k){
      |                ~~~~~~~~~~^~~
sudoku.c:7:8: note: while referencing ‘sudo’
    7 |    int sudo[9][9];
      |        ^~~~
sudoku.c:60:23: error: array subscript 9 is above array bounds of ‘int[9][9]’ [-Werror=array-bounds]
   60 |             if(n->sudo[j][i] != k){
      |                ~~~~~~~^~~
sudoku.c:7:8: note: while referencing ‘sudo’
    7 |    int sudo[9][9];
      |        ^~~~
sudoku.c:49:17: error: ‘i’ is used uninitialized [-Werror=uninitialized]
   49 |    for(j = 0; i < 9; i++){
      |               ~~^~~
cc1: all warnings being treated as errors
Compilation failed
d3dd11a
Thu 16 May 2024 07:32:03 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:54:26: error: array subscript 9 is above array bounds of ‘int[9]’ [-Werror=array-bounds]
   54 |             if(n->sudo[i][j] == k){
      |                ~~~~~~~~~~^~~
sudoku.c:7:8: note: while referencing ‘sudo’
    7 |    int sudo[9][9];
      |        ^~~~
sudoku.c:60:23: error: array subscript 9 is above array bounds of ‘int[9][9]’ [-Werror=array-bounds]
   60 |             if(n->sudo[j][i] != k){
      |                ~~~~~~~^~~
sudoku.c:7:8: note: while referencing ‘sudo’
    7 |    int sudo[9][9];
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
ce85ba2
Thu 16 May 2024 07:34:42 PM UTC: 
 sudoku.c | 40 +++++++++++++++++++++++++++++++---------
 1 file changed, 31 insertions(+), 9 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:15: error: unused variable ‘k’ [-Werror=unused-variable]
   48 |       int i,j,k;
      |               ^
sudoku.c: In function ‘is_valid’:
sudoku.c:91:1: error: control reaches end of non-void function [-Werror=return-type]
   91 | }
      | ^
At top level:
sudoku.c:47:8: error: ‘is_valid’ defined but not used [-Werror=unused-function]
   47 |    int is_valid(Node* n){
      |        ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ea60cc7
Thu 16 May 2024 07:35:11 PM UTC: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  3|4
total_score: 20/70
0bc78cd
Thu 16 May 2024 07:37:22 PM UTC: 
 sudoku.c | 29 ++++++++++-------------------
 1 file changed, 10 insertions(+), 19 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:91:10: error: unused variable ‘j’ [-Werror=unused-variable]
   91 |   int i, j;
      |          ^
sudoku.c:91:7: error: unused variable ‘i’ [-Werror=unused-variable]
   91 |   int i, j;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
3a5e1aa
Thu 16 May 2024 07:44:08 PM UTC: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  3|4
total_score: 20/70
f311c10
Thu 16 May 2024 07:46:33 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  3|4
total_score: 20/70
e9f5866
Thu 16 May 2024 07:46:47 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
382aa74
Thu 16 May 2024 07:47:43 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
c0b12fb
Thu 16 May 2024 07:51:18 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
f14c718
Thu 16 May 2024 07:52:00 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
68b9413
Thu 16 May 2024 07:53:59 PM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
test.c: In function ‘get_adj_nodes’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c76e011
Thu 16 May 2024 07:54:20 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
dfcbffe
Thu 16 May 2024 07:59:44 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|3
total_score: 35/70
9a06355
Thu 16 May 2024 08:00:15 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:115:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  115 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
2f60a48
Thu 16 May 2024 08:01:21 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
7c35f96
Thu 16 May 2024 08:02:16 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|3
total_score: 35/70
7dc613b
Thu 16 May 2024 08:15:25 PM UTC: 
 sudoku.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  0|0
3393d1c
Thu 16 May 2024 08:16:05 PM UTC: 
 sudoku.c | 12 +++---------
 1 file changed, 3 insertions(+), 9 deletions(-)
 tests:  5|3
total_score: 35/70
34b6efd
Thu 16 May 2024 08:18:01 PM UTC: 
 sudoku.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
test.c: In function ‘get_adj_nodes’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:262:1: error: expected declaration or statement at end of input
In file included from test.c:5:
sudoku.c:93:13: error: unused variable ‘new_node’ [-Werror=unused-variable]
   93 |       Node *new_node = createNode();
      |             ^~~~~~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
956f9dd
Thu 16 May 2024 08:19:34 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:93:13: error: unused variable ‘new_node’ [-Werror=unused-variable]
   93 |       Node *new_node = createNode();
      |             ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
62161c8
Thu 16 May 2024 08:20:13 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|4
total_score: 20/70
bd79e8e
Thu 16 May 2024 08:24:34 PM UTC: 
 sudoku.c | 12 ++++--------
 1 file changed, 4 insertions(+), 8 deletions(-)
 tests:  5|3
total_score: 35/70
458c52c
Sat 18 May 2024 12:31:31 AM UTC: 
 sudoku.c | 18 +++++++++---------
 1 file changed, 9 insertions(+), 9 deletions(-)
 tests:  6|2
total_score: 45/70
af815c2
Sat 18 May 2024 12:33:43 AM UTC: 
 sudoku.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
5028878
Sat 18 May 2024 12:58:02 AM UTC: 
 sudoku.c | 40 ++++++++++++++++++++++++++++++++--------
 1 file changed, 32 insertions(+), 8 deletions(-)
In file included from test.c:5:
sudoku.c:110:1: error: expected identifier or ‘(’ before ‘}’ token
  110 | }
      | ^
Compilation failed
8853792
